--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ build
 devel
 
 profile.tmp
+
+# Ignore the root CMakeLists.txt, 
+# which will be auto-generated (linked) by catkin_make
+ros/src/CMakeLists.txt
